<resources>
    <string name="app_name">WorkOut</string>
    <string name="start">START</string>
    <string name="start_image">Start Image</string>
    <string name="this_will_stop_your_workout_are_you_sure_want_to_quit_this_exercise">This will stop your workout.Are you sure want to quit this exercise?</string>
    <string name="yes">YES</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">No</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="history">History</string>
</resources>