<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textColor="@color/toolbar_color_control_normal"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvrr"/>


    <TextView
        android:id="@+id/tvrr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/this_will_stop_your_workout_are_you_sure_want_to_quit_this_exercise"
        android:textColor="@color/toolbar_color_control_normal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/yesbtn"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvv" />

    <Button
            android:id="@+id/yesbtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:layout_constraintRight_toLeftOf="@+id/nobtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvrr"
            android:gravity="center"
            android:text="@string/yes" />

        <Button
            android:id="@+id/nobtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="15dp"

            app:layout_constraintLeft_toRightOf="@+id/yesbtn"
            app:layout_constraintTop_toBottomOf="@+id/tvrr"
            app:layout_constraintRight_toRightOf="parent"

            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no" />



</androidx.constraintlayout.widget.ConstraintLayout>