<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/main_screen_padding"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/img"
        android:contentDescription="@string/start_image"
        app:layout_constraintBottom_toTopOf="@+id/flFile"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <FrameLayout
        android:id="@+id/flFile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:background="@drawable/report_concept_for_ripple">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/start"
            android:layout_gravity="center"
            android:textSize="@dimen/default_tS"
            android:textColor="@color/design_default_color_primary_dark"
            android:textStyle="bold"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flbmi"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/circular_accent_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flFile">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:textSize="@dimen/default_tS"
            android:textStyle="bold" />


    </FrameLayout>

    <TextView
        android:id="@+id/tvbmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculator"
        android:textColor="@color/green"
        android:textSize="@dimen/default_tS"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/flbmi"
        app:layout_constraintEnd_toEndOf="@id/flbmi"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="@id/flbmi"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/flhistroy"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/circular_accent_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.579"
        app:layout_constraintStart_toEndOf="@id/flbmi"
        app:layout_constraintTop_toBottomOf="@+id/flFile">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/start_image"
            android:src="@drawable/img_6"/>

    </FrameLayout>

    <TextView
        android:id="@+id/tvhis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="@color/green"
        android:textSize="@dimen/default_tS"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/flhistroy"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/flhistroy"
        app:layout_constraintTop_toBottomOf="@+id/flhistroy"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>